<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="data">—— 游戏存档加载器</string>
    <string name="about">简介</string>
    <string name="add">点击此处载入所有文件</string>
    <string name="startgame">开始游戏</string>
    <string name="file_no_found">没有找到任何文件！请确认是否添加到APK</string>
    <string name="file_no_export">无法导出文件到SD卡！</string>
    <string name="file_no_open">你没有安装打开ModPE(.js)或材质包的软件！</string>
    <string name="file_open_count">共%1$d个ModPE(.js)将会导入</string>
    <string name="modpe_powered_by">本加载器需要安装并使用Block Launcher启动器才能使用</string>
    <string name="game_powered_by">本游戏需要安装并使用Minecraft PE</string>
    <string name="game_no_support">当前游戏版本不是最适合的版本 \n 建议使用 </string>
    <string name="system_message">是否前往应用市场下载？</string>
    <string name="system_no_download">目前只能使用存档导出功能！</string>
    <string name="done">确认</string>
    <string name="cancel">取消</string>
    <string name="level_export_ok">存档导出成功</string>
    <string name="source_export_ok">资源导出成功</string>
    <string name="texture_export_ok">材质包导出成功</string>
    <string name="texture_find_err">只允许存在一个材质包！</string>
    <string name="texture_build_err">材质包格式错误!</string>
    <string name="skin_export_ok">皮肤导出成功</string>
    <string name="skin_find_err">只允许存在一个皮肤！</string>
    <string name="game_option_no_found">没有找到游戏设置文件，请先运行一次游戏！</string>
    <string name="game_version_set_err">游戏版本号检测设置或者获取错误！</string>
    <string name="import_set">请选择导入方式</string>
    <string name="texture_no_support_mctools">目前材质包不支持多玩我的世界盒子直接导入，请在游戏目录resource_pack目录下手动选取导入Game_Texture文件</string>
    <string name="texture_no_support_blocklauncher">目前材质包不支持Block Launcher直接导入，请在游戏目录resource_pack目录下手动选取导入Game_Texture文件</string>
    <string name="default_import_method">默认导入方式</string>
    <string name="mctool_name">多玩我的世界盒子</string>
    <string name="skin_options_can_not_use">游戏options.txt文件存在问题，请删除此文件并启动一次游戏后重试</string>
        
    <!--以下为可修改文字-->
    <string name="app_name">MC_Test</string>
    <string name="title">Test 游戏</string>
    <string name="about_data">            这只是一个测试            \n test data  \n可以导出存档和modpe(.js)啦</string>
    
</resources>
